--- a/res/layout/teacher_waiting_activity.xml
+++ b/res/layout/teacher_waiting_activity.xml
@@ -8,6 +8,6 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Student Room!!"
-        android:id="@+id/txtView_StudentRoom"/>
+        android:text="Teacher waiting!!"
+        android:id="@+id/txtView_TeacherRoom"/>
 </LinearLayout>
