--- a/res/layout/home_fragment.xml
+++ b/res/layout/home_fragment.xml
@@ -18,14 +18,18 @@
         android:text="Teacher : Right now" />
 
     <Button
+            android:id="@+id/btn_sendNotification"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Student : Send notification"/>
+
+    <Button
         android:id="@+id/btn_newClass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Student : Take new Class"/>
-
-
-
 
 
 </LinearLayout>
