--- a/res/layout/drawer_list_section.xml
+++ b/res/layout/drawer_list_section.xml
@@ -15,14 +15,14 @@
   -->
 
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@android:id/text1"
+          android:id="@+id/section_list"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textAppearance="?android:attr/textAppearanceListItemSmall"
           android:gravity="center_vertical"
-          android:paddingLeft="24dp"
+          android:paddingLeft="16dp"
           android:paddingRight="16dp"
-          android:textColor="#fff"
+          android:textColor="#449"
           android:background="?android:attr/activatedBackgroundIndicator"
           android:minHeight="?android:attr/listPreferredItemHeightSmall">
 </TextView>
