--- a/res/layout/disp_profile_default.xml
+++ b/res/layout/disp_profile_default.xml
@@ -5,10 +5,9 @@
               android:layout_height="fill_parent"
     >
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Guide Activity"
-            android:id="@+id/textView"
-            android:layout_gravity="center"/>
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="History"
+        />
 
 </LinearLayout>
