--- a/res/layout/disp_guide_student.xml
+++ b/res/layout/disp_guide_student.xml
@@ -2,74 +2,107 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
-    >
+              android:layout_height="fill_parent">
+
     <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="match_parent"
+                  android:layout_height="0dp"
+                  android:layout_weight="9"
                   android:orientation="vertical"
-                  android:gravity="center">
+                  android:gravity="center"
+                  android:paddingLeft="20dp"
+                  android:paddingRight="20dp">
 
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/guide_textView_guide_title"
                   android:textSize="30dp"
-                  android:paddingLeft="20dp"
                   android:paddingBottom="5dp"
                   android:drawableLeft="@drawable/ic_launcher"
                   android:layout_gravity="bottom"
                   android:gravity="bottom"/>
 
         <LinearLayout android:layout_width="fill_parent"
-                                     android:layout_height="wrap_content"
-                                     android:orientation="horizontal"
-                                     android:gravity="left"
-                                     android:paddingLeft="20dp"
-                                     android:paddingTop="10dp">
+                      android:layout_height="wrap_content"
+                      android:orientation="horizontal"
+                      android:gravity="left"
+                      android:paddingLeft="5dp"
+                      android:paddingTop="10dp">
             <CheckBox android:layout_width="30dp"
                       android:layout_height="30dp"
                       android:checked="true"
-                      android:enabled="false"/>
+                      android:enabled="true"/>
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="15dp"
                       android:paddingLeft="5dp"
-                      android:text="First Guide"/>
+                      android:text="@string/guide_teacher_textView_guide_first"/>
         </LinearLayout>
 
         <LinearLayout android:layout_width="fill_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:gravity="left"
-                      android:paddingLeft="20dp"
+                      android:paddingLeft="5dp"
                       android:paddingTop="10dp">
             <CheckBox android:layout_width="30dp"
                       android:layout_height="30dp"
                       android:checked="true"
-                      android:enabled="false"/>
+                      android:enabled="true"/>
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="15dp"
                       android:paddingLeft="5dp"
-                      android:text="First Guide"/>
+                      android:text="@string/guide_teacher_textView_guide_second"/>
         </LinearLayout>
 
         <LinearLayout android:layout_width="fill_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:gravity="left"
-                      android:paddingLeft="20dp"
+                      android:paddingLeft="5dp"
                       android:paddingTop="10dp">
             <CheckBox android:layout_width="30dp"
                       android:layout_height="30dp"
                       android:checked="true"
-                      android:enabled="false"/>
+                      android:enabled="true"/>
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="15dp"
                       android:paddingLeft="5dp"
-                      android:text="First Guide"/>
+                      android:text="@string/guide_teacher_textView_guide_third"/>
         </LinearLayout>
 
+        <LinearLayout android:layout_width="fill_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="horizontal"
+                      android:gravity="left"
+                      android:paddingLeft="5dp"
+                      android:paddingTop="10dp">
+            <CheckBox android:layout_width="30dp"
+                      android:layout_height="30dp"
+                      android:checked="true"
+                      android:enabled="true"/>
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:textSize="15dp"
+                      android:paddingLeft="5dp"
+                      android:text="@string/guide_teacher_textView_guide_fourth"/>
+        </LinearLayout>
+
+    </LinearLayout>
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="0dp"
+                  android:layout_weight="1"
+                  android:orientation="horizontal"
+                  android:gravity="right">
+        <TextView android:id="@+id/guide_textView_connecting"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:textColor="#84c4d2"
+                  android:textSize="20dp"
+                  android:paddingRight="20dp"
+                  android:text="@string/guide_textView_connecting"
+                  android:textStyle="bold|italic"/>
     </LinearLayout>
 
 </LinearLayout>
