--- a/res/layout/toast_layout.xml
+++ b/res/layout/toast_layout.xml
@@ -14,11 +14,12 @@
                android:src="@drawable/ic_launcher"
                android:contentDescription="@string/app_name"/>
 
-    <TextView  android:layout_width="wrap_content"
+    <TextView  android:id="@+id/toast_textView_notification"
+               android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
-               android:text="@string/toast_textView_notification"
+               android:textColor="#ffffff"
                android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </LinearLayout>
