--- a/res/layout/disp_login.xml
+++ b/res/layout/disp_login.xml
@@ -19,14 +19,14 @@
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:inputType="textShortMessage"
-                   android:text="@string/login_editText_id"/>
+                   android:hint="@string/login_editText_hint_id"/>
 
         <EditText  android:id="@+id/login_editText_password"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:inputType="textPassword"
-                   android:text="@string/login_editText_password" />
+                   android:hint="@string/login_editText_hint_password" />
 
         <Button android:id="@+id/login_button_login" android:layout_height="40dp" android:layout_width="150dp" android:text="@string/login_button_login" android:textColor="#ffffff"/>
         <Button android:id="@+id/login_button_registration" android:layout_height="40dp" android:layout_width="150dp" android:text="@string/login_button_registration" android:textColor="#ffffff"/>
