--- a/res/layout/disp_script.xml
+++ b/res/layout/disp_script.xml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
-    >
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Script View"
-        />
+              android:layout_height="wrap_content">
 
-</LinearLayout>
+    <LinearLayout android:layout_width="fill_parent"
+                  android:layout_height="wrap_content"
+                  android:orientation="vertical">
+
+        <TextView android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:text="@string/script_textView_daily_dialogue_title"
+                  android:textSize="30dp"
+                  android:paddingLeft="20dp"
+                  android:paddingBottom="5dp"
+                  android:drawableLeft="@drawable/ic_launcher"
+                  android:layout_gravity="bottom"
+                  android:gravity="bottom"/>
+
+        <TextView android:id="@+id/script_textView_expression"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:paddingLeft="25dp"
+                  android:paddingRight="25dp"/>
+
+
+
+    </LinearLayout>
+</ScrollView>
