--- a/res/layout/disp_myinfo.xml
+++ b/res/layout/disp_myinfo.xml
@@ -17,7 +17,7 @@
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/imageView_profile_icon_description"
-                   android:src="@drawable/profile_icon"/>
+                   android:src="@drawable/profile_icon_blue"/>
         <TextView android:id="@+id/myinfo_textView_profile_name"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
