--- a/res/values/styles_openschool.xml
+++ b/res/values/styles_openschool.xml
@@ -79,4 +79,26 @@
         <item name="android:dropDownListViewStyle">@style/DropDownListView.Openschool</item>
     </style>
 
+    <!-- Toggle style -->
+    <style name="Widget.Button.Toggle.Good" parent="android:Widget">
+        <item name="android:background">@drawable/evaluation_toggle_good_bg</item>
+        <item name="android:disabledAlpha">?android:attr/disabledAlpha</item>
+    </style>
+
+    <style name="toggleButton_good"  parent="@android:Theme.Black">
+        <item name="android:buttonStyleToggle">@style/Widget.Button.Toggle.Good</item>
+        <item name="android:textOn"/>
+        <item name="android:textOff"/>
+    </style>
+
+    <style name="Widget.Button.Toggle.Bad" parent="android:Widget">
+        <item name="android:background">@drawable/evaluation_toggle_good_bg</item>
+        <item name="android:disabledAlpha">?android:attr/disabledAlpha</item>
+    </style>
+
+    <style name="toggleButton_bad"  parent="@android:Theme.Black">
+        <item name="android:buttonStyleToggle">@style/Widget.Button.Toggle.Bad</item>
+        <item name="android:textOn"/>
+        <item name="android:textOff"/>
+    </style>
 </resources>
