--- a/res/layout/item_temporal_student.xml
+++ b/res/layout/item_temporal_student.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/temporal_item_root"
+              android:id="@+id/temporal_student_item_root"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
@@ -9,20 +9,15 @@
               android:paddingTop="20dp"
               android:paddingRight="20dp"
               android:paddingLeft="20dp">
-    <RadioGroup
-            android:id="@+id/temporal_radioGroup_choices"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
 
-        <RadioButton
-                android:id="@+id/temporal_radioGroup_first_choice"
+        <TextView
+                android:id="@+id/temporal_student_textView_first_choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
-        <RadioButton
-                android:id="@+id/temporal_radioGroup_second_choice"
+        <TextView
+                android:id="@+id/temporal_student_textView_second_choice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
-    </RadioGroup>
+
 </LinearLayout>
