--- a/res/layout/disp_registration.xml
+++ b/res/layout/disp_registration.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/registration_layout_root"
               android:orientation="vertical"
               android:gravity="center"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:clickable="true">
 
 
         <ImageView android:id="@+id/registration_imageView_main_icon"
@@ -84,4 +86,11 @@
 
         <Button android:id="@+id/registration_button_confirm" android:layout_height="40dp" android:layout_width="150dp" android:text="@string/registration_button_confirm" android:textColor="#ffffff"/>
 
+        <TextView android:id="@+id/registration_textView_msg"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:textColor="#84c4d2"
+                  android:textSize="20dp"
+                  android:paddingRight="20dp"
+                  android:textStyle="bold|italic"/>
 </LinearLayout>
