--- a/res/layout/disp_script.xml
+++ b/res/layout/disp_script.xml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="fill_parent"
-              android:layout_height="wrap_content">
+            android:id="@+id/script_layout_root"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
 
-    <LinearLayout android:id="@+id/script_layout_root"
+    <LinearLayout android:id="@+id/script_layout_dialogue_container"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">
 
+        <TextView android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:text="@string/script_textView_title"
+                  android:textSize="30dp"
+                  android:paddingLeft="20dp"
+                  android:paddingBottom="5dp"
+                  android:drawableLeft="@drawable/ic_launcher"
+                  android:layout_gravity="bottom"
+                  android:gravity="bottom"/>
 
+        <TextView
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:text="오늘 만든 dialogue를 다시 한번 읽어보세요!"
+                  android:paddingLeft="20dp"
+                  android:paddingBottom="5dp"/>
 
     </LinearLayout>
 </ScrollView>
