--- a/res/layout/disp_dialogue_student.xml
+++ b/res/layout/disp_dialogue_student.xml
@@ -16,10 +16,9 @@
               android:layout_gravity="bottom"
               android:gravity="bottom"/>
 
-    <TextView android:id="@+id/dialogue_student_textView_guide"
+    <TextView android:id="@+id/dialogue_student_textView_msg"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:text="선생님과 대화를 통해서 Dialogue를 만들어보세요!"
               android:textSize="15dp"
               android:paddingLeft="20dp"
               android:paddingBottom="5dp"/>
@@ -27,6 +26,7 @@
     <Space android:layout_width="fill_parent" android:layout_height="15dp"/>
 
     <LinearLayout android:id="@+id/dialogue_student_question_root_layout"
+                  android:animateLayoutChanges="true"
                   android:orientation="vertical"
                   android:layout_height="wrap_content"
                   android:layout_width="fill_parent"
@@ -34,9 +34,10 @@
                   android:paddingLeft="20dp"
                   android:paddingRight="10dp"/>
 
-    <Space android:layout_width="fill_parent" android:layout_height="15dp"/>
+    <Space android:layout_width="fill_parent" android:layout_height="25dp"/>
 
     <LinearLayout android:id="@+id/dialogue_student_answer_root_layout"
+                  android:animateLayoutChanges="true"
                   android:orientation="vertical"
                   android:layout_height="wrap_content"
                   android:layout_width="fill_parent"
@@ -44,20 +45,4 @@
                   android:paddingLeft="20dp"
                   android:paddingRight="10dp"/>
 
-    <Space android:layout_width="fill_parent" android:layout_height="20dp"/>
-
-    <LinearLayout android:layout_height="wrap_content"
-                  android:layout_width="fill_parent"
-                  android:orientation="vertical"
-                  android:gravity="right"
-                  android:paddingLeft="20dp"
-                  android:paddingRight="20dp">
-
-        <TextView android:id="@+id/dialogue_student_textView_msg"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:textColor="#84c2cf"
-                  android:textSize="15dp"/>
-
-    </LinearLayout>
 </LinearLayout>
