--- a/res/layout/item_question.xml
+++ b/res/layout/item_question.xml
@@ -29,7 +29,8 @@
                       android:layout_height="fill_parent"
                       android:layout_width="fill_parent"
                       android:paddingLeft="5dp"
-                      android:layout_gravity="center_vertical|left">
+                      android:gravity="center"
+                      android:layout_gravity="center">
             <TextView android:id="@+id/item_question_textView_body"
                       android:layout_height="wrap_content" android:layout_width="wrap_content"
                       android:textColor="#ffffff" android:textSize="20sp"/>
